--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,10 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "jest": "^26.6.3",
-    "parcel-bundler": "^1.12.4",
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "parcel": "^2.0.0-beta.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
